// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Password snapshots collection is Password component render right? 1`] = `
<div
  class="password-wrapper"
>
  <div
    class="password-element-wrapper"
  >
    <input
      aria-invalid="false"
      class="password-input"
      name="test"
      type="password"
      value=""
    />
    <i
      class="password-is-hidden"
    />
  </div>
  <div
    class="password-message-default"
  >
    Используйте строчные и прописные латинские буквы и цифры, не менее 8 символов
  </div>
</div>
`;

exports[`Check Password snapshots collection is Password with defaultValue render right? 1`] = `
<div
  class="password-wrapper"
>
  <div
    class="password-element-wrapper"
  >
    <input
      aria-invalid="false"
      class="password-input"
      name="test"
      type="password"
      value="12345"
    />
    <i
      class="password-is-hidden"
    />
  </div>
  <div
    class="password-message-weak"
  >
    Слабый пароль
  </div>
</div>
`;

exports[`Check Password snapshots collection is Password with hasClearButton render right? 1`] = `
<div
  class="password-wrapper"
>
  <div
    class="password-element-wrapper"
  >
    <input
      aria-invalid="false"
      class="password-input"
      name="test"
      type="password"
      value="12345"
    />
    <i
      class="password-clear-icon"
    />
    <i
      class="password-is-hidden"
    />
  </div>
  <div
    class="password-message-weak"
  >
    Слабый пароль
  </div>
</div>
`;
